--- a/Etch-a-Sketch/style.css
+++ b/Etch-a-Sketch/style.css
@@ -1,9 +1,22 @@
+.container {
+    margin: 0.5em auto;
+    width: 70%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+#change-grid {
+    align-self: center;
+}
+
 #grid-container {
     display: grid;
     grid-template-columns: repeat(16, 1fr);
     grid-gap: 1px;
-    width: 400px;
-    height: 400px;
+    width: 100%;
+    height: 560px;
     margin: 0 auto;
 }
 
@@ -14,5 +27,5 @@
 }
 
 .hovered {
-    background-color: #3498db;
+    background-color: #36454F;
 }
